--- a/admin.html
+++ b/admin.html
@@ -11,6 +11,8 @@
 <h2 id="admin">Checking if you're an admin...</h1>
 </center>
 <script>
+var admins = ["hymenopus", "jellyfishguy"];
+ 
 function contains(a, obj) {
   for (var i = 0; i < a.length; i++) {
         if (a[i] === obj) {
