--- a/admin.html
+++ b/admin.html
@@ -9,6 +9,15 @@
  </div>
 <br><br>
 <h2 id="admin">Checking if you're an admin...</h1>
+<div id="hidden" style="visibility:hidden;">
+ <p>Only us admins can post/talk here!</p>
+ <p>Note: This page is only for deciding about mutes/bans.</p><br>
+ <!-- begin comment box -->
+ <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
+ <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%243yD1.Hi93ryNAuOTAUZB50"+"&opts=16406&num=10&ts=1494623824036");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+<!-- end comment box -->
+</div>
 </center>
 <script>
 var admins = ["hymenopus", "jellyfishguy"];
@@ -40,6 +49,7 @@ function getCookie(cname) {
 
 if (contains(admins, getCookie("name"))) {
    document.getElementById('admin').innerHTML = "Welcome to the admin panel!";
+   document.getElementById('hidden').style = "visibility:block;";
 } else {
   document.getElementById('admin').innerHTML = "You're not an admin!";
 }
