--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ var admins = ["hymenopus", "jellyfishguy"];
 
  function checkAdmin() {
   if (contains(admins, getCookie("name"))) {
-            document.getElementById('adminpanelnotice').innerHTML = "There is an admin panel where we can talk privatley! <a href='admin.html'>Click here!</a> (Only you and jellyfishguy and see this text).";
+            document.getElementById('adminpanelnotice').innerHTML = "There is an admin panel where we can talk privatley! <a href='admin.html'>Click here!</a> (only we can see this) - jellyfishguy";
    }
  }
  
