--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
+<audio autoplay>
+  <source src="TI.mp3" type="audio/mp3">
+</audio>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <center>
 <div class="top">
