--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 <audio autoplay>
-  <source src="TI.mp3" type="audio/mp3">
+  <source src="TI.mp3" type="audio/mpeg">
 </audio>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <center>
