--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ var admins = ["hymenopus", "jellyfishguy"];
 
  function checkAdmin() {
   if (contains(admins, getCookie("name"))) {
-            document.getElementById('adminpanelnotice').innerHTML = "There is an admin panel where we can talk privatley! <a href='admin.html'>Click here!</a> (only we can see this) - jellyfishguy";
+            document.getElementById('adminpanelnotice').innerHTML = "There is an admin panel where we can talk privatly! <a href='admin.html'>Click here!</a> (only we can see this) - jellyfishguy";
    }
  }
  
