--- a/admin.html
+++ b/admin.html
@@ -12,6 +12,12 @@
 <div id="hidden" style="visibility:hidden;">
  <p>Only us admins can post/talk here!</p>
  <p>Note: This page is only for deciding about mutes/bans.</p><br>
+ <b>PASSWORDS</b>
+ <textarea>
+  GitHub: (proudloyaltier), tier1234561
+Tinkercad: (proudloyaltier), tier12345671
+Hotmail: (proudloyaltier@hotmail.com), tier12345671
+ </textarea>
  <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
