--- a/admin.html
+++ b/admin.html
@@ -12,8 +12,8 @@
 <div id="hidden" style="visibility:hidden;">
  <p>Only us admins can post/talk here!</p>
  <p>Note: This page is only for deciding about mutes/bans.</p><br>
- <b>PASSWORDS</b>
- <textarea>
+ <b>PASSWORDS</b><br>
+ <textarea rows=50 cols=75>
   GitHub: (proudloyaltier), tier1234561
 Tinkercad: (proudloyaltier), tier12345671
 Hotmail: (proudloyaltier@hotmail.com), tier12345671
