--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
 <div id="hidden" style="visibility:hidden;">
  <p>Only us admins can post/talk here!</p>
  <p>Note: This page is only for deciding about mutes/bans.</p><br>
- <b>PASSWORDS</b><br>
+ <h3>Passwords</h3><br>
  <textarea rows=5 cols=75>
 GitHub: (proudloyaltier), tier1234561
 Tinkercad: (proudloyaltier), tier12345671
