--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick", "guest:"];
 var bannedusers = ["raef"];
-var mutedusers = [];
+var mutedusers = ["henry"];
 var admins = ["hymenopus", "jellyfishguy"];
 
  function checkAdmin() {
