--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
  <p>Note: This page is only for deciding about mutes/bans.</p><br>
  <h3>Passwords</h3><br>
  <textarea rows=5 cols=75>
-GitHub: (proudloyaltier), tier1234561
+GitHub: (hidden for security reasons)
 Tinkercad: (proudloyaltier), tier12345671
 Hotmail: (proudloyaltier@hotmail.com), tier1234561
  </textarea>
