--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
- <p>Don't have a login? Request one <a href="https://coffee-media.github.io/net"><b>here.</b></a>
+ <p>Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLSfa8IOIpwSUopMe6NV00N_HQY0r710uQdMVaZVyN1sJnvMcTg/viewform"><b>here.</b></a>
  </div><br>
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
- <p>If you would like to appeal, post why on CoffeeMedia.</p>
+ <p>You may not appeal for this ban.<p>
  <button onclick="logOut()" class="base btn">Log Out</button>
  </div>
  <br>
