--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick", "guest:"];
-var bannedusers = ["raef"];
+var bannedusers = [];
 var mutedusers = ["guest", "henry"];
 var admins = ["hymenopus", "jellyfishguy"];
 
