--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 
 </div>
 <script>
-var logins = ["hymenopus:tier", "henry:port", "jellyfishguy:jellyfishes", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick", "guest:"];
+var logins = ["hymenopus:tier", "henry:port", "graphinghandheld:tI", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick", "guest:"];
 var bannedusers = [];
 var mutedusers = ["guest", "henry"];
-var admins = ["hymenopus", "jellyfishguy"];
+var admins = ["hymenopus", "graphinghandheld"];
 
  function checkAdmin() {
   if (contains(admins, getCookie("name"))) {
