--- a/admin.html
+++ b/admin.html
@@ -26,7 +26,7 @@ Hotmail: (proudloyaltier@hotmail.com), tier1234561
 </div>
 </center>
 <script>
-var admins = ["hymenopus", "jellyfishguy"];
+var admins = ["hymenopus", "graphinghandheld"];
  
 function contains(a, obj) {
   for (var i = 0; i < a.length; i++) {
