--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
  <button class="base btn" onclick="checkPass()">Login!</button>
- <p>Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLSfa8IOIpwSUopMe6NV00N_HQY0r710uQdMVaZVyN1sJnvMcTg/viewform"><b>here.</b></a>
+ <p>Don't have a login? Request one <a href="goo.gl/forms/d1bchNulaEsK5MU73"><b>here.</b></a>
  </div><br>
 <div style="visibility:hidden;" id="ban">
  <h3>You are banned from TiMedia</h3>
