--- a/admin.html
+++ b/admin.html
@@ -12,12 +12,7 @@
 <div id="hidden" style="visibility:hidden;">
  <p>Only us admins can post/talk here!</p>
  <p>Note: This page is only for deciding about mutes/bans.</p><br>
- <h3>Passwords</h3><br>
- <textarea rows=5 cols=75>
-GitHub: (hidden for security reasons)
-Tinkercad: (proudloyaltier), tier12345671
-Hotmail: (proudloyaltier@hotmail.com), tier1234561
- </textarea>
+ <a href="https://docs.google.com/forms/d/e/1FAIpQLSevLj7ENmuQaPyaY1OkD6TVmy_3aLtkGvH74ez0uEqLmNOguQ/viewform"><h3>Click here to punish someone (mute/ban them).</h3></a><br>
  <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
