--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  <br>
 <div id="content" style="visibility: hidden;">
  <h1 id="hello">Hello!</h1><button onclick="logOut()" class="base btn">Log Out</button>
- <p id="adminpanelnotice"></p>
+ <p id="modpanelnotice"></p>
  <h3>WARNING: DO NOT POST "CASIO"!</h3>
  <p>This is a TI forum, not social media. For social media (and non TI related disscussions), visit <a href="http://coffee-media.github.io/net">CoffeeMedia!</a> (The admins regularly post there too!)</p><br>
  <img width=175px src="https://images-na.ssl-images-amazon.com/images/I/71RH7Vj8FUL._SL1500_.jpg">
@@ -57,11 +57,11 @@
 var logins = ["hymenopus:tier", "henry:port", "graphinghandheld:tI", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick", "guest:"];
 var bannedusers = [];
 var mutedusers = ["guest", "henry"];
-var admins = ["hymenopus", "graphinghandheld"];
+var mods = ["hymenopus", "graphinghandheld", "hayden", "neil"];
 
  function checkAdmin() {
-  if (contains(admins, getCookie("name"))) {
-            document.getElementById('adminpanelnotice').innerHTML = "There is an admin panel where we can talk privately! <a href='admin.html'>Click here!</a> (only we can see this) - jellyfishguy";
+  if (contains(mods, getCookie("name"))) {
+            document.getElementById('modpanelnotice').innerHTML = "<a href='mod.html'>Click here to access the moderator panel!</a>";
    }
  }
  
