--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
  <h3>You need access to this page</h3>
  <input placeholder="Username" id="username" type="text"><br>
  <input placeholder="Password" id="password" type="password"><br>
- <button class="base btn" onclick="checkPass()">Login!</button><br>
- <a onclick="document.getElementById('username').value = 'guest'; document.getElementById('password').value = ''; checkPass();">Sign in as guest</a>
+ <button class="base btn" onclick="checkPass()">Login!</button>
+ <a onclick="document.getElementById('username').value = 'guest'; document.getElementById('password').value = ''; checkPass();"> or sign in as guest</a>
  <p>Don't have a login? Request one <a href="https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform"><b>here.</b></a>
  </div><br>
 <div style="visibility:hidden;" id="ban">
