--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "graphinghandheld:tI", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick"]
-var bannedusers = [];
+var bannedusers = ["henry"];
+var banreason = ["Spamming (x2), compromised account"]
 var mutedusers = ["henry"];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil"];
 
