--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ var banreason = ["Spamming (x2), compromised account"]
 var mutedusers = ["henry"];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil"];
 
-  if (window.location.href == "https://timedia.netlify.com" || window.location.href == "http://timedia.netlify.com") {
+  if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
       document.write("");
   }
   
