--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 </div>
 <script>
 var logins = ["hymenopus:tier", "henry:port", "graphinghandheld:tI", "neil:cat", "hayden:qwerty", "raef:ti", "nachocheese2017:mccormick"]
-var bannedusers = ["henry"];
-var banreason = ["Spamming (x2), compromised account"]
-var mutedusers = ["henry"];
+var bannedusers = [""];
+var banreason = [""]
+var mutedusers = [""];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil"];
 
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
