--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <div class="top">
  <h2 style="color:white;">TiMedia</h2>
  </div>
+  <div class="background">
+<br>
+  </div>
 <br><br>
 <div id="access">
  <h3>You need access to this page</h3>
