--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <center>
 <div class="top">
  <h2 style="color:white;">TiMedia</h2>
- </div><br><br><br>
+ </div><br><br>
   <div class="background">
 <br>
   </div>
