--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 <center>
 <div class="top">
  <h2 style="color:white;">TiMedia</h2>
- </div><br><br>
-  <div class="background">
-<br>
-  </div>
+ </div>
 <br><br>
 <div id="access">
  <h3>You need access to this page</h3>
@@ -61,7 +58,6 @@ var bannedusers = [""];
 var banreason = [""]
 var mutedusers = [""];
 var mods = ["hymenopus", "graphinghandheld", "hayden", "neil"];
-
   if (window.location.href == "https://timedia.netlify.com/" || window.location.href == "http://timedia.netlify.com/") {
       document.write("");
   }
@@ -99,20 +95,7 @@ function logOut() {
  delete_cookie("name");
  location.reload();
 }
-
-function grantAccess() {
-                 document.cookie = "login=true";
-                 document.cookie = "name=" + document.getElementById('username').value;
-                 document.getElementById('access').remove();
-                 document.getElementById('ban').remove();
-                 document.getElementById('content').style = "visibility: block;";
-                 document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
-                 setInterval(checkMute, 50);
-                 setInterval(checkCasioer, 50);
-                 checkAdmin();
-                 setInterval(changeName, 50);
-  
-}
+ 
  
 function delete_cookie( name ) {
   document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
@@ -160,7 +143,16 @@ function checkPass() {
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
            } else {
-              grantAccess();
+                 document.cookie = "login=true";
+                 document.cookie = "name=" + document.getElementById('username').value;
+                 document.getElementById('access').remove();
+                 document.getElementById('ban').remove();
+                 document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
+                 document.getElementById('content').style = "visibility: block;";
+                 checkMute();
+                 setInterval(checkCasioer, 50);
+                 setInterval(changeName, 50);
+                 checkAdmin();
            }
            } else {
   alert("Username or password is incorrect.");
@@ -172,7 +164,15 @@ function checkPass() {
                  document.getElementById('ban').style = "visibility: block;";
                  document.getElementById('access').remove();
            } else {
-                 grantAccess();
+                 document.getElementById('access').remove();
+                 document.getElementById('ban').remove();
+                 document.getElementById('content').style = "visibility: block;";
+                 document.getElementById('hello').innerHTML = "Hello, " + getCookie("name") + "!";
+                 setTimeout(checkMute, 200);
+                 setInterval(checkCasioer, 50);
+                 checkAdmin();
+                 setInterval(changeName, 50);
+                 
            }
  }
  </script>
