--- a/reward.html
+++ b/reward.html
@@ -28,9 +28,9 @@ function getCookie(cname) {
 var balance = getCookie("points") + 1;
 document.cookie = "points=" + balance;
 if (balance == 1) {
-    alert("You've been awared 1 TiPoint. You now have 1 TiPoint.);
+    alert("You've been rewarded 1 TiPoint. You now have 1 TiPoint.);
 } else {
-  alert("You've been awared 1 TiPoint. You now have " + balance + " TiPoints.");
+  alert("You've been rewarded 1 TiPoint. You now have " + balance + " TiPoints.");
 }
 window.location.href = "index.html";
 </script>
