--- a/reward.html
+++ b/reward.html
@@ -28,7 +28,7 @@ function getCookie(cname) {
 var balance = getCookie("points") + 1;
 document.cookie = "points=" + balance;
 if (balance == 1) {
-    alert("You've been rewarded 1 TiPoint. You now have 1 TiPoint.);
+    alert("You've been rewarded 1 TiPoint. You now have 1 TiPoint.");
 } else {
   alert("You've been rewarded 1 TiPoint. You now have " + balance + " TiPoints.");
 }
