--- a/points.html
+++ b/points.html
@@ -3,6 +3,10 @@
 <title>TiMedia</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body><center>
+<div class="top">
+ <h2 style="color:white;">TiMedia</h2>
+ </div>
+ <br><br><br>
 <h3 id="balance">Current balance: Loading...</h3>
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
