--- a/points.html
+++ b/points.html
@@ -28,7 +28,7 @@ function getCookie(cname) {
     return "0";
 }
  
-document.getElementById('balance').innerHTML = "Current balance: " + getCookie("points");
+document.getElementById('balance').innerHTML = "Current balance: " + getCookie("points") + " TiPoints";
 </script>
 </body></center>
 </html>
