--- a/points.html
+++ b/points.html
@@ -8,6 +8,7 @@
  </div>
  <br><br><br>
 <h3 id="balance">Current balance: Loading...</h3><br>
+ <h3>Store</h3>
 <img width=200px src="http://i.imgur.com/m5ITKZ0.png">
  <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
