--- a/points.html
+++ b/points.html
@@ -9,8 +9,8 @@
  <br><br><br>
 <h3 id="balance">Current balance: Loading...</h3><br>
  <h3>Store</h3>
-<img width=200px src="http://i.imgur.com/m5ITKZ0.png">
-<img width=200px src="http://i.imgur.com/bsGBadI.png">
+<img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
+<img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png">
  <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Comment Form</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=50&ts=1495572466451");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
@@ -29,6 +29,28 @@ function getCookie(cname) {
         }
     }
     return "0";
+}
+ 
+function buyVit() {
+if (Number(getCookie("points") > 999) {
+    var r = confirm("Would you like to buy VIT for 1,000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000) + " TiPoints.");
+    if (r == true) {
+       alert("Purchase successful.");   
+    }
+} else {
+ alert("Insufficent funds.");
+}
+}
+
+function buyMvt() {
+if (Number(getCookie("points") > 2499) {
+    var r = confirm("Would you like to buy MVT for 1,000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000) + " TiPoints.");
+    if (r == true) {
+       alert("Purchase successful.");   
+    }
+} else {
+ alert("Insufficent funds.");
+}
 }
  
 document.getElementById('balance').innerHTML = "Current balance: " + getCookie("points") + " TiPoints";
