--- a/points.html
+++ b/points.html
@@ -32,19 +32,19 @@ function getCookie(cname) {
 }
  
 function buyVit() {
-if (Number(getCookie("points") > 999) {
-    var r = confirm("Would you like to buy VIT for 1,000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000) + " TiPoints.");
-    if (r == true) {
-       alert("Purchase successful.");   
-    }
-} else {
- alert("Insufficent funds.");
-}
+  if (Number(getCookie("points") > 999) {
+      var r = confirm("Would you like to buy VIT for 1,000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000)) + " TiPoints.");
+      if (r == true) {
+         alert("Purchase successful.");   
+      }
+  } else {
+   alert("Insufficent funds.");
+  }
 }
 
 function buyMvt() {
 if (Number(getCookie("points") > 2499) {
-    var r = confirm("Would you like to buy MVT for 1,000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000) + " TiPoints.");
+    var r = confirm("Would you like to buy MVT for 1,000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000)) + " TiPoints.");
     if (r == true) {
        alert("Purchase successful.");   
     }
