--- a/points.html
+++ b/points.html
@@ -33,7 +33,7 @@ function getCookie(cname) {
  
 function buyVit() {
   if (Number(getCookie("points") > 999) {
-      var r = confirm("Would you like to buy VIT for 1,000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000)) + " TiPoints.");
+      var r = confirm("Would you like to buy VIT for 1000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000) + " TiPoints.");
       if (r == true) {
          alert("Purchase successful.");   
       }
@@ -44,7 +44,7 @@ function buyVit() {
 
 function buyMvt() {
 if (Number(getCookie("points") > 2499) {
-    var r = confirm("Would you like to buy MVT for 1,000 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 1000)) + " TiPoints.");
+    var r = confirm("Would you like to buy MVT for 2500 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 2500) + " TiPoints.");
     if (r == true) {
        alert("Purchase successful.");   
     }
