--- a/points.html
+++ b/points.html
@@ -8,6 +8,7 @@
  </div>
  <br><br><br>
 <h3 id="balance">Current balance: Loading...</h3><br>
+ <a href="microify.com/1zrV">Earn TiPoints for watching ads!</a>
  <h3>Store</h3>
 <img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
 <img onclick="buyMvt();" width=200px src="http://i.imgur.com/bsGBadI.png">
