--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ function checkPass() {
                  setTimeout(checkMute, 200);
                  setInterval(checkCasioer, 50);
                  checkAdmin();
+		 setInterval(checkRank, 50);
                  setInterval(changeName, 50);
                  
            }
