--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var mods = ["hymenopus", "graphinghandheld", "hayden", "neil"];
  }
  
 function checkRank() {
-  if (getCookie("isVit") = "true") {
+  if (getCookie("isVit") == "true") {
     var i = 0;
 while (i < 10) {
 if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
@@ -79,7 +79,7 @@ if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("na
 i++;
 }
   }
-  if (getCookie("isMvt") = "true") {
+  if (getCookie("isMvt") == "true") {
     var i = 0;
 while (i < 10) {
 if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
