--- a/reward.html
+++ b/reward.html
@@ -20,6 +20,6 @@ function getCookie(cname) {
 
 var balance = Number(getCookie("points")) + 1;
 document.cookie = "points=" + Number(balance);
-window.location.href = "index.html";
+window.location.href = "points.html";
 </script>
 </html>
