--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function checkRank() {
     var i = 0;
 while (i < 10) {
 if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
-	document.getElementsByClassName('author-name')[i].style = "color:yellow;";
+	document.getElementsByClassName('author-name')[i].style = "color:gold;";
 }
 i++;
 }
