--- a/points.html
+++ b/points.html
@@ -39,7 +39,7 @@ if (getCookie("isVit") == "true") {
 if (Number(getCookie("points") > 499)) {
 var r = confirm("Would you like to buy VIT for 500 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 500) + " TiPoints.");
  if (r == true) {
-   document.cookie = "points=" + Number(getCookie("points") - 500);
+     localStorage.setItem("points", Number(localStorage.points - 500));
    document.cookie = "isVit=true";
    alert("Purchase successful.");
    location.reload();
@@ -57,7 +57,7 @@ if (getCookie("isMvt") == "true") {
 if (Number(getCookie("points") > 2499)) {
     var r = confirm("Would you like to buy MVT for 2500 TiPoints? Your balance after this purchase will be " + Number(getCookie("points") - 2500) + " TiPoints.");
     if (r == true) {
-       document.cookie = "points=" + Number(getCookie("points") - 2500);
+     localStorage.setItem("points", Number(localStorage.points - 2500));
        document.cookie = "isMvt=true";
        alert("Purchase successful."); 
        location.reload();  
@@ -67,7 +67,7 @@ if (Number(getCookie("points") > 2499)) {
 }
 }
 }
-document.getElementById('balance').innerHTML = "Current balance: " + getCookie("points") + " TiPoints";
+document.getElementById('balance').innerHTML = "Current balance: " + localStorage.points + " TiPoints";
 </script>
 </body></center>
 </html>
