--- a/points.html
+++ b/points.html
@@ -37,7 +37,7 @@ if (getCookie("isVit") == "true") {
  alert("Already purchased.");
 } else {
 if (Number(localStorage.points) > 499) {
-var r = confirm("Would you like to buy VIT for 500 TiPoints? Your balance after this purchase will be " + Number(localStorage.points) - 500) + " TiPoints.");
+var r = confirm("Would you like to buy VIT for 500 TiPoints? Your balance after this purchase will be " + Number(localStorage.points) - 500 + " TiPoints.");
  if (r == true) {
      localStorage.setItem("points", Number(localStorage.points - 500));
    document.cookie = "isVit=true";
