--- a/points.html
+++ b/points.html
@@ -37,7 +37,7 @@ if (getCookie("isVit") == "true") {
  alert("Already purchased.");
 } else {
 if (Number(localStorage.points) > 499) {
-var r = confirm("Would you like to buy VIT for 500 TiPoints? Your balance after this purchase will be " + Number(localStorage.points) - 500 + " TiPoints.");
+var r = confirm("Would you like to buy VIT for 500 TiPoints? Your balance after this purchase will be " + localStorage.points - 500 + " TiPoints.");
  if (r == true) {
      localStorage.setItem("points", Number(localStorage.points - 500));
    document.cookie = "isVit=true";
@@ -55,7 +55,7 @@ if (getCookie("isMvt") == "true") {
  alert("Already purchased.");
 } else {
 if (Number(localStorage.points) > 2499) {
-    var r = confirm("Would you like to buy MVT for 2500 TiPoints? Your balance after this purchase will be " + Number(localStorage.points) - 2500 + " TiPoints.");
+    var r = confirm("Would you like to buy MVT for 2500 TiPoints? Your balance after this purchase will be " + localStorage.points - 2500 + " TiPoints.");
     if (r == true) {
      localStorage.setItem("points", Number(localStorage.points - 2500));
        document.cookie = "isMvt=true";
