--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("na
 i++;
 }
   }
-  if (localStorage.isVit == "true") {
+  if (localStorage.isMvt == "true") {
     var i = 0;
 while (i < 10) {
 if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
