--- a/points.html
+++ b/points.html
@@ -44,7 +44,7 @@ var r = confirm("Would you like to buy VIT for 500 TiPoints?");
    location.reload();
    }
  } else {
-   alert("Insufficent funds.");
+   alert("Insufficient funds.");
    }
 }
 }
@@ -62,7 +62,7 @@ if (Number(localStorage.points) > 2499) {
        location.reload();  
     }
 } else {
- alert("Insufficent funds.");
+ alert("Insufficient funds.");
 }
 }
 }
