--- a/points.html
+++ b/points.html
@@ -6,6 +6,7 @@
  <h2 style="color:white;">TiMedia</h2>
  </div>
  <br><br><br>
+ <p align="right"><a href="index.html">Back to Home</a></p>
 <h3 id="balance">Current balance: Loading...</h3><br>
  <a href="http://microify.com/1zrV">Earn TiPoints by watching ads!</a>
  <h3>Store</h3>
