--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
 <!-- start Feedback -->
 <script data-sil-id='591367bea43fd60015db241c'> (function() {var d = document, w = window, l = window.location,p = l.protocol == 'file:' ? 'http://' : '//';if (!w.WS) w.WS = {}; c = w.WS;var m=function(t, o){  var e = d.getElementsByTagName('script'); e=e[e.length-1];  var n = d.createElement(t); if (t=='script') {n.async=true;} for (k in o) n[k] = o[k];  e.parentNode.insertBefore(n, e)};   m('script', {      src: p+'bawkbox.com/widget/feedback/591367bea43fd60015db241c?page='+encodeURIComponent(l+''),      type: 'text/javascript'  });  c.load_net = m;})();</script><div class='sil-widget-feedback sil-widget' id='sil-widget-591367bea43fd60015db241c'<a href='https://bawkbox.com/install/feedback'>Feedback is loading...</a></div>
 <!-- end Feedback -->
-
+<iframe style="visibility:hidden;" id="calculator" width=300px height=300px src="https://www.online-calculator.com/html5/online-calculator/index.php">
+  <p>Your browser does not support iframes.</p>
+</iframe>
  <p id="mutemessage"></p>
  <!-- begin comment box -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
@@ -88,6 +90,9 @@ if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("na
 i++;
 }
   }
+if (localStorage.calc == "true") {
+	document.getElementById('calculator').style = "visibility:block;";
+}
 }
   function changeName() {
    document.getElementById('hcb_form_name').value = getCookie("name");
