--- a/points.html
+++ b/points.html
@@ -10,7 +10,7 @@
 <h3 id="balance">Current balance: Loading...</h3><br>
  <a href="http://microify.com/1zrV">Earn TiPoints by watching ads!</a>
  <h3>Earn points by pledging TI!</h3>
- <img width=200px src="http://i.imgur.com/QxFCwIN.png">
+ <img width=400px src="http://i.imgur.com/QxFCwIN.png"><br>
  <input type="text" placeholder="Type the pledge here.">
  <br>
  <h3>Store</h3>
