--- a/points.html
+++ b/points.html
@@ -11,7 +11,7 @@
  <a href="http://microify.com/1zrV">Earn TiPoints by watching ads!</a>
  <h3>Earn points by pledging TI!</h3>
  <img width=400px src="http://i.imgur.com/QxFCwIN.png"><br>
- <input type="text" placeholder="Type the pledge here.">
+ <input type="text" id="pledge" placeholder="Type the pledge here.">
  <br>
  <h3>Store</h3>
 <img onclick="buyVit();" width=200px src="http://i.imgur.com/m5ITKZ0.png">
