--- a/points.html
+++ b/points.html
@@ -10,7 +10,7 @@
 <h3 id="balance">Current balance: Loading...</h3><br>
  <a href="http://microify.com/1zrV">Earn TiPoints by watching ads!</a>
  <h3>Earn points by pledging TI!</h3>
- <img width=400px src="http://i.imgur.com/QxFCwIN.png"><br>
+ <img width=400px id="pledgeimg" src="http://i.imgur.com/QxFCwIN.png"><br>
  <input type="text" id="pledge" placeholder="Type the pledge here.">
  <br>
  <h3>Store</h3>
@@ -21,6 +21,8 @@
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=50&ts=1495572466451");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
 <script>
+document.getElementById('pledgeimg').ondragstart = function() { return false; };
+ 
 function getCookie(cname) {
     var name = cname + "=";
     var decodedCookie = decodeURIComponent(document.cookie);
