--- a/sync.html
+++ b/sync.html
@@ -6,6 +6,22 @@
 
 <script>
 var i = 0;
+ function getCookie(cname) {
+    var name = cname + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var ca = decodedCookie.split(';');
+    for(var i = 0; i <ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+            c = c.substring(1);
+        }
+        if (c.indexOf(name) == 0) {
+            return c.substring(name.length, c.length);
+        }
+    }
+    return "";
+}
+ 
 
 while (i < document.getElementsByTagName('blockquote').length) {
   if (document.getElementsByClassName('author-name')[i].innerHTML == getCookie("name") + " ") {
