--- a/sync.html
+++ b/sync.html
@@ -1,3 +1,5 @@
+Please wait...
+
 <!-- begin wwww.htmlcommentbox.com -->
  <div style="visibility:hidden;" id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">HTML Comment Box</a> is loading comments...</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
