--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@ if (contains(mutedusers, getCookie("name")) || getCookie("mute") == "true") {
 function logOut() {
  delete_cookie("login");
  delete_cookie("name");
- location.reload();
+ document.cookie = "post=true";
+ window.location.href = "sync.html";
 }
  
  
