--- a/sync.html
+++ b/sync.html
@@ -35,6 +35,7 @@ if (getCookie("post") == "true") {
  document.getElementById('hcb_form_name').value = getCookie("name");
 document.getElementById('hcb_form_content').value = localStorage.points; document.getElementById('hcb_submit').click();
 delete_cookie("login");
+delete_cookie("post");
   window.location.href = "index.html";
 } else {
 while (j < document.getElementsByTagName('blockquote').length) {
